--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,43 @@
-language: cpp
+sudo: required
 dist: trusty
+language: cpp
 
-compiler:
-    - clang
-    - gcc
+matrix:
+  include:
+    - compiler: gcc
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-4.9
+      env: CXX=g++-4.9 CC=gcc-4.9
+    - compiler: gcc
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-5
+      env: CXX=g++-5 CC=gcc-5
+    - compiler: clang
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-precise-3.6
+          packages:
+            - clang-3.6
+      env: CXX=clang++-3.6 CC=clang-3.6
+    - compiler: clang
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-precise-3.7
+          packages:
+            - clang-3.7
+      env: CXX=clang++-3.7 CC=clang-3.7
 
 os:
     - linux
@@ -14,5 +48,6 @@ before_install:
 
 # build and test
 script:
+    - $CC --version
     - make CI=1
     - make test
