--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-sudo: required
 dist: trusty
 language: cpp
 
@@ -20,6 +19,14 @@ matrix:
           packages:
             - g++-5
       env: CXX=g++-5 CC=gcc-5
+    - compiler: gcc
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-6
+      env: CXX=g++-6 CC=gcc-6
     - compiler: clang
       addons:
         apt:
