--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ matrix:
           packages:
             - g++-4.9
       env:
-          - COMPILERCXX=g++-4.9
-          - COMPILERC=gcc-4.9
+          - CXX=g++-4.9
+          - CC=gcc-4.9
     - compiler: gcc
       addons:
         apt:
@@ -21,8 +21,8 @@ matrix:
           packages:
             - g++-5
       env:
-          - COMPILERCXX=g++-5
-          - COMPILERC=gcc-5
+          - CXX=g++-5
+          - CC=gcc-5
     - compiler: gcc
       addons:
         apt:
@@ -31,8 +31,8 @@ matrix:
           packages:
             - g++-6
       env:
-          - COMPILERCXX=g++-6
-          - COMPILERC=gcc-6
+          - CXX=g++-6
+          - CC=gcc-6
     - compiler: clang
       addons:
         apt:
@@ -42,8 +42,8 @@ matrix:
           packages:
             - clang-3.6
       env:
-          - COMPILERCXX=clang++-3.6
-          - COMPILERC=clang-3.6
+          - CXX=clang++-3.6
+          - CC=clang-3.6
     - compiler: clang
       addons:
         apt:
@@ -53,8 +53,8 @@ matrix:
           packages:
             - clang-3.7
       env:
-          - COMPILERCXX=clang++-3.7
-          - COMPILERC=clang-3.7
+          - CXX=clang++-3.7
+          - CC=clang-3.7
 os:
     - linux
 
@@ -64,8 +64,6 @@ before_install:
 
 # build and test
 script:
-    - CC=$COMPILERC
-    - CXX=$COMPILERCXX
     - $CC --version
     - make CI=1
     - make test
