--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,7 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-4.9
-      env:
-          - CXX=g++-4.9
-          - CC=gcc-4.9
+      env: CC=gcc-4.9
     - compiler: gcc
       addons:
         apt:
@@ -20,9 +18,7 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-5
-      env:
-          - CXX=g++-5
-          - CC=gcc-5
+      env: CC=gcc-5
     - compiler: gcc
       addons:
         apt:
@@ -30,9 +26,7 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-6
-      env:
-          - CXX=g++-6
-          - CC=gcc-6
+      env: CC=gcc-6
     - compiler: clang
       addons:
         apt:
@@ -41,9 +35,7 @@ matrix:
             - llvm-toolchain-precise-3.6
           packages:
             - clang-3.6
-      env:
-          - CXX=clang++-3.6
-          - CC=clang-3.6
+      env: CC=clang-3.6
     - compiler: clang
       addons:
         apt:
@@ -52,9 +44,7 @@ matrix:
             - llvm-toolchain-precise-3.7
           packages:
             - clang-3.7
-      env:
-          - CXX=clang++-3.7
-          - CC=clang-3.7
+      env: CC=clang-3.7
 os:
     - linux
 
