--- a/.travis.yml
+++ b/.travis.yml
@@ -1,48 +1,30 @@
 dist: trusty
+language: cpp
+
+addons:
+    apt:
+      sources:
+        - ubuntu-toolchain-r-test
+        - llvm-toolchain-precise-3.6
+        - llvm-toolchain-precise-3.7
+      packages:
+        - g++-4.9
+        - g++-5
+        - g++-6
+        - clang-3.6
+        - clang-3.7
 
 matrix:
   include:
     - compiler: gcc
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-4.9
       env: CC=gcc-4.9
     - compiler: gcc
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-5
       env: CC=gcc-5
     - compiler: gcc
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-6
       env: CC=gcc-6
     - compiler: clang
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-            - llvm-toolchain-precise-3.6
-          packages:
-            - clang-3.6
       env: CC=clang-3.6
     - compiler: clang
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-            - llvm-toolchain-precise-3.7
-          packages:
-            - clang-3.7
       env: CC=clang-3.7
 os:
     - linux
